--- a/dictionary.ipynb
+++ b/dictionary.ipynb
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'kavya', 'class': '12th', 'roll_no': 202, 'age': 17}\n"
+     ]
+    }
+   ],
    "source": [
     "student = {\n",
     "    \"name\" : \"kavya\",\n",
@@ -27,9 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'lucknow': [25, 30, 35], 'delhi': [30, 35, 40], 'chennai': [24, 23, 22]}\n"
+     ]
+    }
+   ],
    "source": [
     "temp = {\n",
     "    'lucknow' : [25,30,35],\n",
@@ -41,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'kavya', 'age': 24, 'dept': 'HR', 'salary': 30000}\n"
+     ]
+    }
+   ],
    "source": [
     "info = dict(name='kavya',age=24,dept='HR',salary=30000)\n",
     "print(info)"
@@ -51,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'kavya', 'age': 23, 'dept': 'HR', 'salary': 30000}\n"
+     ]
+    }
+   ],
    "source": [
     "info2=dict(name=input(\"enter the name\"),age=int(input(\"enter the age\")),dept=input(\"enter the depthment\"),salary=int(input(\"enter the salary\")))\n",
     "print(info2)"
@@ -61,9 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kavya\n",
+      "202\n"
+     ]
+    }
+   ],
    "source": [
     "#1st method\n",
     "print(student['name'])\n",
@@ -72,9 +113,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kavya\n",
+      "202\n"
+     ]
+    }
+   ],
    "source": [
     "#2nd method\n",
     "print(student.get('name'))\n",
@@ -83,9 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'kavya', 'class': '12th', 'roll_no': 202, 'age': 17, 'school': 'dps', 'city': 'lucknow'}\n"
+     ]
+    }
+   ],
    "source": [
     "#to add item in a dictionary\n",
     "student['school'] = 'dps'\n",
@@ -95,9 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "class\n",
+      "roll_no\n",
+      "age\n",
+      "school\n",
+      "city\n"
+     ]
+    }
+   ],
    "source": [
     "for x in student:\n",
     "    print(x)"
@@ -105,9 +176,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:kavya\n",
+      "class:12th\n",
+      "roll_no:202\n",
+      "age:17\n",
+      "school:dps\n",
+      "city:lucknow\n"
+     ]
+    }
+   ],
    "source": [
     "for k,v in student.items():\n",
     "    print(f'{k}:{v}')"
@@ -115,9 +199,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name', 'class', 'roll_no', 'age', 'school', 'city'])\n",
+      "dict_values(['kavya', '12th', 202, 17, 'dps', 'lucknow'])\n",
+      "dict_items([('name', 'kavya'), ('class', '12th'), ('roll_no', 202), ('age', 17), ('school', 'dps'), ('city', 'lucknow')])\n"
+     ]
+    }
+   ],
    "source": [
     "print(student.keys())\n",
     "print(student.values())\n",
@@ -126,9 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'emp001': {'name': 'kavya', 'age': 25, 'dept': 'finance', 'roll_no': 203, 'salary': 30000}, 'emp002': {'name': 'ekta', 'age': 19, 'dept': 'HR', 'roll_no': 200, 'salary': 30000}, 'emp003': {'name': 'aryan', 'age': 22, 'dept': 'IT', 'roll_n0': 204, 'salary': 25000}}\n"
+     ]
+    }
+   ],
    "source": [
     "# nested dictionary\n",
     "company = {\n",
@@ -159,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,36 +270,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'emp001': {'name': 'kavya',\n",
+      "            'age': 25,\n",
+      "            'dept': 'finance',\n",
+      "            'roll_no': 203,\n",
+      "            'salary': 30000},\n",
+      " 'emp002': {'name': 'ekta',\n",
+      "            'age': 19,\n",
+      "            'dept': 'HR',\n",
+      "            'roll_no': 200,\n",
+      "            'salary': 30000},\n",
+      " 'emp003': {'name': 'aryan',\n",
+      "            'age': 22,\n",
+      "            'dept': 'IT',\n",
+      "            'roll_n0': 204,\n",
+      "            'salary': 25000}}\n"
+     ]
+    }
+   ],
    "source": [
     "pp(company)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HR\n"
+     ]
+    }
+   ],
    "source": [
     "print(company['emp002']['dept'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kavya\n"
+     ]
+    }
+   ],
    "source": [
     "print(company['emp001']['name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'emp001': {'name': 'kavya',\n",
+      "            'age': 25,\n",
+      "            'dept': 'finance',\n",
+      "            'roll_no': 203,\n",
+      "            'salary': 30000},\n",
+      " 'emp002': {'name': 'ekta',\n",
+      "            'age': 19,\n",
+      "            'dept': 'HR',\n",
+      "            'roll_no': 200,\n",
+      "            'salary': 30000},\n",
+      " 'emp003': {'name': 'aryan',\n",
+      "            'age': 22,\n",
+      "            'dept': 'IT',\n",
+      "            'roll_n0': 204,\n",
+      "            'salary': 25000},\n",
+      " 'emp004': {'name': 'khush',\n",
+      "            'age': 18,\n",
+      "            'roll_no': 200,\n",
+      "            'dept': 'HR',\n",
+      "            'salary': 45000}}\n"
+     ]
+    }
+   ],
    "source": [
     "company['emp004'] = {\n",
     "    'name':'khush',\n",
@@ -211,9 +378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "40\n"
+     ]
+    }
+   ],
    "source": [
     "print(temp['lucknow'][1])\n",
     "print(temp['delhi'][2])"
@@ -221,18 +397,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average temperature in delhi : 35.0\n"
+     ]
+    }
+   ],
    "source": [
     "print('average temperature in delhi :', sum(temp['delhi'])/len(temp['delhi']) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alex': {'English': 80, 'maths': 85, 'hindi': 90, 'total_marks': 255},\n",
+      " 'Rahul': {'English': 80, 'maths': 85, 'hindi': 90, 'total_marks': 255}}\n"
+     ]
+    }
+   ],
    "source": [
     "report = {\n",
     "    'Alex': {\n",
@@ -258,9 +451,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "\n",
