--- a/dictionary.ipynb
+++ b/dictionary.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,6 +366,7 @@
     }
    ],
    "source": [
+    "#add a new dictionary\n",
     "company['emp004'] = {\n",
     "    'name':'khush',\n",
     "    'age':18,\n",
@@ -374,25 +375,6 @@
     "    'salary':45000\n",
     "}\n",
     "pp(company)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n",
-      "40\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(temp['lucknow'][1])\n",
-    "print(temp['delhi'][2])"
    ]
   },
   {
@@ -414,15 +396,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alex': {'English': 80, 'maths': 85, 'hindi': 90, 'total_marks': 255},\n",
-      " 'Rahul': {'English': 80, 'maths': 85, 'hindi': 90, 'total_marks': 255}}\n"
+      "{'Alex': {'English': 80, 'maths': 85, 'hindi': 90},\n",
+      " 'Rahul': {'English': 80, 'maths': 85, 'hindi': 90}}\n"
      ]
     }
    ],
@@ -431,74 +413,45 @@
     "    'Alex': {\n",
     "        'English':80,\n",
     "        'maths':85,\n",
-    "        'hindi':90,\n",
-    "        'total_marks':255\n",
-    "        \n",
+    "        'hindi':90  \n",
     "    },\n",
     "    'Rahul': {\n",
     "        'English':80,\n",
     "        'maths':85,\n",
-    "        'hindi':90,\n",
-    "        'total_marks':255\n",
-    "    },\n",
+    "        'hindi':90\n",
+    "    }\n",
     "}\n",
     "pp(report)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alex\n",
+      "-> English 80\n",
+      "-> maths 85\n",
+      "-> hindi 90\n",
+      "-> total marks : 255\n",
+      "Rahul\n",
+      "-> English 80\n",
+      "-> maths 85\n",
+      "-> hindi 90\n",
+      "-> total marks : 255\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "for student, marks in report.items():\n",
+    "    print(student)\n",
+    "    for subject, mark in marks.items():\n",
+    "        print('->', subject, mark)\n",
+    "    print('-> total marks :', sum(marks.values()))"
    ]
   }
  ],
