--- a/function.ipynb
+++ b/function.ipynb
@@ -1,6 +1,141 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# function in python\n",
+    "\n",
+    ". Predefined function\n",
+    "   . built-in function -modules based functions\n",
+    "      - local modues\n",
+    "      - maths\n",
+    "      - datetime\n",
+    "      - os\n",
+    "      - turtle\n",
+    "      - random\n",
+    "\n",
+    "    -3rd party modules\n",
+    "\n",
+    "      - numpy\n",
+    "      - pandas\n",
+    "      - matplotlib\n",
+    "      - dputils\n",
+    ". users defined function - function with return value - non-parameterized function - parameterized function - required parameers/named parameter - default parameters - keyvalues variables args - lambda - map and filter\n",
+    "\n",
+    " . MODULES OF FUNCTION\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "93326215443944152681699238856266700490715968264381621468592963895217599993229915608941463976156518286253697920827223758251185210916864000000000000000000000000"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.factorial(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.5440211108893698"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.sin(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.floor(3.12930012309123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.ceil(3.129)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.129"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.fabs(-3.129)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -14,27 +149,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "choice"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = ['12','32','3','32','13','23']\n",
-    "print(data)\n",
-    "print(\"your number is:\")\n",
-    "print(choice(data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'randint' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(randint(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m6\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'randint' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(randint(1,6))"
    ]
@@ -66,15 +199,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(datetime.now())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'datetime' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# date\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m date \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mdate(datetime\u001b[38;5;241m.\u001b[39mnow())\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(date)\n\u001b[0;32m      4\u001b[0m time \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mtime(datetime\u001b[38;5;241m.\u001b[39mnow())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'datetime' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# date\n",
     "date = datetime.date(datetime.now())\n",
@@ -539,20 +682,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[102, 405, 910, 1617, 2526, 3637, 4950, 6465, 8182, 222]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data1 = [1,2,3,4,5,6,7,8,9,10]\n",
     "data2 = [10,20,30,40,50,60,70,80,90,11]\n",
@@ -562,20 +694,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(102, 405, 910, 1617, 2526, 3637, 4950, 6465, 8182, 222)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tuple(map(g,data1, data2))"
    ]
