# 4if elif ladder, nested if else, short hand if else, match case

--- a/conditions.ipynb
+++ b/conditions.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CONDITIONS OF PYTHON\n",
+    "# CONDITIONS in PYTHON\n",
     "- block of code\n",
-    "    -\n",
+    "    - if,else,elif,while,for,try,except,finally,with,def,class\n",
     "- if condition\n",
     "- if else condition\n",
     "- if elif ladder\n",
@@ -31,6 +31,7 @@
     }
    ],
    "source": [
+    "# if condition\n",
     "a = -3\n",
     "a > 5 # block of code\n",
     "print(\"a is greater then 5\")\n",
@@ -59,23 +60,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📃not:100\n"
+      "yay 100\n"
      ]
     }
    ],
    "source": [
-    "n = (12,21,32)\n",
+    "#if else condition\n",
+    "n = (12,21,32,43)\n",
     "if sum(n)>100:\n",
     "    print(\"yay 100\")\n",
     "else:\n",
-    "    print(\"📃not:100\")"
+    "    print(\"😡 not 100\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "😡 not 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = [1,21,32,43]\n",
+    "if sum(n)>100:\n",
+    "    print(\"yay 100\")\n",
+    "else:\n",
+    "    print(\"😡 not 100\")"
    ]
   },
   {
@@ -135,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📃Invalid username\n"
+      "Invalid username\n"
      ]
     }
    ],
@@ -150,16 +173,16 @@
     "# nested if else\n",
     "un = input('enter the username')\n",
     "pw = input('enter the password')\n",
-    "if un != '' and pw !='':\n",
+    "if un and pw :\n",
     "    if un =='admin':\n",
     "        if pw =='admin':\n",
-    "            print(\"📃 welcome, Admin\")\n",
+    "            print(\"welcome, Admin\")\n",
     "        else:\n",
-    "            print(\"📃wrong Password\")\n",
+    "            print(\"wrong Password\")\n",
     "    else:\n",
-    "        print(\"📃Invalid username\")\n",
+    "        print(\"Invalid username\")\n",
     "else:\n",
-    "    print(\"📃Enter valid details📃\")"
+    "    print(\"Enter valid details\")"
    ]
   },
   {
@@ -171,21 +194,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📃\n",
-      "📃\n"
+      "true\n",
+      "true\n"
      ]
     }
    ],
    "source": [
     "# short hand if else\n",
-    "a = 10\n",
-    "print(\"📃\") if a >=10 else print(\"❌\")\n",
-    "print(\"📃\" if a >=10 else \"❌\")"
+    "a = 13\n",
+    "print(\"true\") if a >=10 else print(\"❌\")\n",
+    "print(\"true\" if a >=10 else \"❌\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,30 +216,20 @@
      "output_type": "stream",
      "text": [
       "what would you like to eat\n",
-      "menu\n",
+      "Menu\n",
       "1. pizza🍕\n",
       "2. momo\n",
       "3. pasta🍝\n",
       "4. sandwich\n",
-      "enter a number: \n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m4. sandwich\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menter a number: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 9\u001b[0m ch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m>>>\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mmatch\u001b[39;00m ch:\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mcase\u001b[39;00m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myour order is pizza🍕 \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mtotal amt = 400\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mcase\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01m_\u001b[39;00m:\n\u001b[0;32m     20\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid choice\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "enter a number: \n",
+      "Invalid choice\n"
      ]
     }
    ],
    "source": [
     "# match case (not similar to switch case)\n",
     "print(\"what would you like to eat\")\n",
-    "print(\"menu\")\n",
+    "print(\"Menu\")\n",
     "print(\"1. pizza🍕\")\n",
     "print(\"2. momo\")\n",
     "print(\"3. pasta🍝\")\n",
@@ -238,10 +251,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what would you like to eat\n",
+      "menu\n",
+      "1. pizza🍕\n",
+      "2. pasta\n",
+      "3. momo\n",
+      "enter a number:\n",
+      "INVALID CHOICES\n"
+     ]
+    }
+   ],
    "source": [
+    "#match case\n",
     "print(\"what would you like to eat\")\n",
     "print(\"menu\")\n",
     "print(\"1. pizza🍕\")\n",
